--- a/assets/event.html
+++ b/assets/event.html
@@ -324,7 +324,19 @@
             </div>
             <br>
 
-
+            <div class="col-sm-4" style="padding: 50px;" data-aos="flip-left" data-aos-delay="100">
+                <div class="card card-cascade">
+                    <div class="view view-cascade overlay">
+                        <img class="card-img-top" src="../assets/images/masterclass1.jpeg" alt="masterclass1"
+                            style="width: 95%;">
+                    </div>
+                    <div class="card-body card-body-cascade text-center">
+                        <h4 class="card-title"><strong>ACM - S MASTERCLASS</strong></h4>
+                        <h6 class="font-weight-bold indigo-text py-2">SPEAKER 05</h6>
+                        <a href="https://forms.gle/c5tdLfz8PiiQKr6K7" style="color:white;"><button class="btn blue-gradient">REGISTER</button></a>
+                    </div>
+                </div>
+            </div>
 
             <div class="col-sm-4" style="padding: 50px;" data-aos="flip-left" data-aos-delay="100">
                 <div class="card card-cascade">
