--- a/assets/event.html
+++ b/assets/event.html
@@ -352,22 +352,7 @@
                 </div>
             </div>
 
-        <div class="col-sm-4" style="padding: 50px;" data-aos="flip-left" data-aos-delay="100">
-                <div class="card card-cascade">
-                    <div class="view view-cascade overlay">
-                        <img class="card-img-top" src="../assets/images/speaker4.jpeg" alt="data science"
-                            style="width: 95%;">
-                    </div>
-                    <div class=" card-body card-body-cascade text-center">
-                        <h4 class="card-title"><strong>ACM - S WEBINAR </strong></h4>
-                        <h6 class="font-weight-bold indigo-text py-2">SPEAKER 03</h6>
-
-
-                        <a href="https://forms.gle/KtMAgW7bvGQLwhde7" style="color:white;"><button class="btn blue-gradient">REGISTER</button></a>
-
-                    </div>
-                </div>
-            </div>
+     
         </div>
         <div class="row">
             <div style="text-align: justify; margin-left: 35px;">
@@ -395,6 +380,22 @@
                 <br>
                 <h3>&nbsp;COMPLETED EVENTS</h3>
                 <br>
+            </div>
+               <div class="col-sm-4" style="padding: 50px;" data-aos="flip-left" data-aos-delay="100">
+                <div class="card card-cascade">
+                    <div class="view view-cascade overlay">
+                        <img class="card-img-top" src="../assets/images/speaker4.jpeg" alt="data science"
+                            style="width: 95%;">
+                    </div>
+                    <div class=" card-body card-body-cascade text-center">
+                        <h4 class="card-title"><strong>ACM - S WEBINAR </strong></h4>
+                        <h6 class="font-weight-bold indigo-text py-2">SPEAKER 03</h6>
+
+
+                        <a href="https://drive.google.com/file/d/1bTwwFgvsxK8z3SA7WoIxSX9BpkvLTPbF/view" style="color:white;"><button class="btn blue-gradient">WATCH VIDEO</button></a>
+
+                    </div>
+                </div>
             </div>
             <div class="col-sm-4" style="padding: 50px;" data-aos="flip-left">
                 <div class="card card-cascade">
@@ -501,7 +502,7 @@
      <div class="footer" style="text-align: center;">
         Made with ❤️ Follow us on !
         <ul class="social-icons">
-            <li> <a href="https://github.com/vishwaskamath/Acm_Sahyadri_Website"> <i class="fa fa-github"></i> </a>
+            <li> <a href="https://github.com/acmsahyadritech/"> <i class="fa fa-github"></i> </a>
             </li>
             <li> <a href="https://www.facebook.com/acmsahyadri/"> <i class="fa fa-facebook"></i></a></li>
             <li> <a href="http://www.twitter.com/AcmSahyadri"> <i class="fa fa-twitter"></i></a></li>
