--- a/assets/team.html
+++ b/assets/team.html
@@ -603,7 +603,7 @@
     <div class="footer" style="text-align: center;">
         Made with ❤️ Follow us on !
         <ul class="social-icons">
-            <li> <a href="https://github.com/vishwaskamath/Acm_Sahyadri_Website"> <i class="fa fa-github"></i> </a>
+            <li> <a href="https://github.com/acmsahyadritech/"> <i class="fa fa-github"></i> </a>
             </li>
             <li> <a href="https://www.facebook.com/acmsahyadri/"> <i class="fa fa-facebook"></i></a></li>
             <li> <a href="http://www.twitter.com/AcmSahyadri"> <i class="fa fa-twitter"></i></a></li>
