--- a/assets/event.html
+++ b/assets/event.html
@@ -337,21 +337,6 @@
                     </div>
                 </div>
             </div>
-
-            <div class="col-sm-4" style="padding: 50px;" data-aos="flip-left" data-aos-delay="100">
-                <div class="card card-cascade">
-                    <div class="view view-cascade overlay">
-                        <img class="card-img-top" src="../assets/images/dinesh.jpeg" alt="dinesh pai"
-                            style="width: 95%;">
-                    </div>
-                    <div class="card-body card-body-cascade text-center">
-                        <h4 class="card-title"><strong>ACM - S WEBINAR</strong></h4>
-                        <h6 class="font-weight-bold indigo-text py-2">SPEAKER 04</h6>
-                        <a href="https://forms.gle/WuWyDJNpRMhid6tJ7" style="color:white;"><button class="btn blue-gradient">REGISTER</button></a>
-                    </div>
-                </div>
-            </div>
-
      
         </div>
         <div class="row">
@@ -380,6 +365,19 @@
                 <br>
                 <h3>&nbsp;COMPLETED EVENTS</h3>
                 <br>
+            </div>
+              <div class="col-sm-4" style="padding: 50px;" data-aos="flip-left" data-aos-delay="100">
+                <div class="card card-cascade">
+                    <div class="view view-cascade overlay">
+                        <img class="card-img-top" src="../assets/images/dinesh.jpeg" alt="dinesh pai"
+                            style="width: 95%;">
+                    </div>
+                    <div class="card-body card-body-cascade text-center">
+                        <h4 class="card-title"><strong>ACM - S WEBINAR</strong></h4>
+                        <h6 class="font-weight-bold indigo-text py-2">SPEAKER 04</h6>
+                        <a href="https://drive.google.com/file/d/19KFKClS4gK5q-PnTbCXTxTPoUBCrhCx0/view" style="color:white;"><button class="btn blue-gradient">WATCH VIDEO</button></a>
+                    </div>
+                </div>
             </div>
                <div class="col-sm-4" style="padding: 50px;" data-aos="flip-left" data-aos-delay="100">
                 <div class="card card-cascade">
