--- a/assets/event.html
+++ b/assets/event.html
@@ -311,7 +311,7 @@
             </b>
           <hr style="width:60%">
 
-
+                
         </div>
 
         <div class="row">
@@ -323,20 +323,8 @@
 
             </div>
             <br>
-
-            <div class="col-sm-4" style="padding: 50px;" data-aos="flip-left" data-aos-delay="100">
-                <div class="card card-cascade">
-                    <div class="view view-cascade overlay">
-                        <img class="card-img-top" src="../assets/images/masterclass1.jpeg" alt="masterclass1"
-                            style="width: 85%;">
-                    </div>
-                    <div class="card-body card-body-cascade text-center">
-                        <h4 class="card-title"><strong>ACM - S MASTERCLASS</strong></h4>
-                        <h6 class="font-weight-bold indigo-text py-2">SPEAKER 05</h6>
-                        <a href="https://forms.gle/c5tdLfz8PiiQKr6K7" style="color:white;"><button class="btn blue-gradient">REGISTER</button></a>
-                    </div>
-                </div>
-            </div>
+  
+            <h3>We will update you soon!</h3>
      
         </div>
         <div class="row">
@@ -366,6 +354,19 @@
                 <h3>&nbsp;COMPLETED EVENTS</h3>
                 <br>
             </div>
+            <div class="col-sm-4" style="padding: 50px;" data-aos="flip-left" data-aos-delay="100">
+                <div class="card card-cascade">
+                    <div class="view view-cascade overlay">
+                        <img class="card-img-top" src="../assets/images/masterclass1.jpeg" alt="masterclass1"
+                            style="width: 85%;">
+                    </div>
+                    <div class="card-body card-body-cascade text-center">
+                        <h4 class="card-title"><strong>ACM - S MASTERCLASS</strong></h4>
+                        <h6 class="font-weight-bold indigo-text py-2">SPEAKER 05</h6>
+                        <a href="https://drive.google.com/file/d/18cVSTNR7KXWpSfsLXtRcZ6oN1heFiboG/view" style="color:white;"><button class="btn blue-gradient">WATCH VIDEO</button></a>
+                    </div>
+                </div>
+            </div>
               <div class="col-sm-4" style="padding: 50px;" data-aos="flip-left" data-aos-delay="100">
                 <div class="card card-cascade">
                     <div class="view view-cascade overlay">
@@ -375,7 +376,7 @@
                     <div class="card-body card-body-cascade text-center">
                         <h4 class="card-title"><strong>ACM - S WEBINAR</strong></h4>
                         <h6 class="font-weight-bold indigo-text py-2">SPEAKER 04</h6>
-                        <a href="https://drive.google.com/file/d/19KFKClS4gK5q-PnTbCXTxTPoUBCrhCx0/view" style="color:white;"><button class="btn blue-gradient">WATCH VIDEO</button></a>
+                        <a href="https://www.youtube.com/watch?v=RY4rab7dEyY" style="color:white;"><button class="btn blue-gradient">WATCH VIDEO</button></a>
                     </div>
                 </div>
             </div>
