--- a/assets/event.html
+++ b/assets/event.html
@@ -324,7 +324,7 @@
             </div>
             <br>
   
-            <h3>We will update you soon!</h3>
+            <center><h3>We will update you soon!</h3></center>
      
         </div>
         <div class="row">
@@ -358,7 +358,7 @@
                 <div class="card card-cascade">
                     <div class="view view-cascade overlay">
                         <img class="card-img-top" src="../assets/images/masterclass1.jpeg" alt="masterclass1"
-                            style="width: 85%;">
+                            style="width: 83%;">
                     </div>
                     <div class="card-body card-body-cascade text-center">
                         <h4 class="card-title"><strong>ACM - S MASTERCLASS</strong></h4>
@@ -371,7 +371,7 @@
                 <div class="card card-cascade">
                     <div class="view view-cascade overlay">
                         <img class="card-img-top" src="../assets/images/dinesh.jpeg" alt="dinesh pai"
-                            style="width: 95%;">
+                            style="width: 93%;">
                     </div>
                     <div class="card-body card-body-cascade text-center">
                         <h4 class="card-title"><strong>ACM - S WEBINAR</strong></h4>
