--- a/assets/event.html
+++ b/assets/event.html
@@ -319,12 +319,12 @@
 
             <div style="text-align: justify; margin-left: 35px;">
                 <br>
-                <h3> &nbsp; UPCOMING EVENTS</h3>
+                <h3>&nbsp;UPCOMING EVENTS</h3>
 
             </div>
             <br>
   
-            <center><h3>We will update you soon!</h3></center>
+            <center><b><h3>We will update you soon!</b></h3></center>
      
         </div>
         <div class="row">
