--- a/assets/event.html
+++ b/assets/event.html
@@ -326,7 +326,7 @@
             <div class="col-sm-4" style="padding: 50px;" data-aos="flip-left" data-aos-delay="100">
                 <div class="card card-cascade">
                     <div class="view view-cascade overlay">
-                        <img class="card-img-top" src="../assets/images/deepak.jpg" alt="deepak"
+                        <img class="card-img-top" src="../assets/images/deepak.jpeg" alt="deepak"
                             style="width: 85%;">
                     </div>
                     <div class="card-body card-body-cascade text-center">
