--- a/assets/event.html
+++ b/assets/event.html
@@ -323,20 +323,7 @@
 
             </div>
             <br>
-            <div class="col-sm-4" style="padding: 50px;" data-aos="flip-left" data-aos-delay="100">
-                <div class="card card-cascade">
-                    <div class="view view-cascade overlay">
-                        <img class="card-img-top" src="../assets/images/deepak.jpeg" alt="deepak"
-                            style="width: 90%;">
-                    </div>
-                    <div class="card-body card-body-cascade text-center">
-                        <h4 class="card-title"><strong>ACM - S WEBINAR</strong></h4>
-                        <h6 class="font-weight-bold indigo-text py-2">SPEAKER 06</h6>
-                        <a href="https://rb.gy/ppgl4v" style="color:white;"><button class="btn blue-gradient">REGISTER</button></a>
-                    </div>
-                </div>
-            </div>
-  
+            <h3>We will update you soon...</h3>
            
      
         </div>
@@ -367,6 +354,20 @@
                 <h3>&nbsp;COMPLETED EVENTS</h3>
                 <br>
             </div>
+             <div class="col-sm-4" style="padding: 50px;" data-aos="flip-left" data-aos-delay="100">
+                <div class="card card-cascade">
+                    <div class="view view-cascade overlay">
+                        <img class="card-img-top" src="../assets/images/deepak.jpeg" alt="deepak"
+                            style="width: 90%;">
+                    </div>
+                    <div class="card-body card-body-cascade text-center">
+                        <h4 class="card-title"><strong>ACM - S WEBINAR</strong></h4>
+                        <h6 class="font-weight-bold indigo-text py-2">SPEAKER 06</h6>
+                       <!-- <a href="https://rb.gy/ppgl4v" style="color:white;"><button class="btn blue-gradient">REGISTER</button></a> -->
+                    </div>
+                </div>
+            </div>
+  
             <div class="col-sm-4" style="padding: 50px;" data-aos="flip-left" data-aos-delay="100">
                 <div class="card card-cascade">
                     <div class="view view-cascade overlay">
