--- a/assets/event.html
+++ b/assets/event.html
@@ -323,7 +323,7 @@
 
             </div>
             <br>
-            <h3>We will update you soon...</h3>
+            <center><h3>We will update you soon...</h3></center>
            
      
         </div>
@@ -363,7 +363,7 @@
                     <div class="card-body card-body-cascade text-center">
                         <h4 class="card-title"><strong>ACM - S WEBINAR</strong></h4>
                         <h6 class="font-weight-bold indigo-text py-2">SPEAKER 06</h6>
-                       <!-- <a href="https://rb.gy/ppgl4v" style="color:white;"><button class="btn blue-gradient">REGISTER</button></a> -->
+                       <a href="#" style="color:white;"><button class="btn blue-gradient">WATCH VIDEO</button></a> -->
                     </div>
                 </div>
             </div>
