--- a/assets/event.html
+++ b/assets/event.html
@@ -363,7 +363,7 @@
                     <div class="card-body card-body-cascade text-center">
                         <h4 class="card-title"><strong>ACM - S WEBINAR</strong></h4>
                         <h6 class="font-weight-bold indigo-text py-2">SPEAKER 06</h6>
-                       <a href="#" style="color:white;"><button class="btn blue-gradient">WATCH VIDEO</button></a> -->
+                       <a href="#" style="color:white;"><button class="btn blue-gradient">WATCH VIDEO</button></a>
                     </div>
                 </div>
             </div>
@@ -372,7 +372,7 @@
                 <div class="card card-cascade">
                     <div class="view view-cascade overlay">
                         <img class="card-img-top" src="../assets/images/masterclass1.jpeg" alt="masterclass1"
-                            style="width: 83%;">
+                            style="width: 81%;">
                     </div>
                     <div class="card-body card-body-cascade text-center">
                         <h4 class="card-title"><strong>ACM - S MASTERCLASS</strong></h4>
