--- a/assets/event.html
+++ b/assets/event.html
@@ -323,7 +323,7 @@
 
             </div>
             <br>
-            <center><h3>We will update you soon...</h3></center>
+            <center><h3>We will update you soon!...</h3></center>
            
      
         </div>
@@ -398,7 +398,7 @@
                 <div class="card card-cascade">
                     <div class="view view-cascade overlay">
                         <img class="card-img-top" src="../assets/images/speaker4.jpeg" alt="data science"
-                            style="width: 97%;">
+                            style="width: 95%;">
                     </div>
                     <div class=" card-body card-body-cascade text-center">
                         <h4 class="card-title"><strong>ACM - S WEBINAR </strong></h4>
@@ -414,7 +414,7 @@
                 <div class="card card-cascade">
                     <div class="view view-cascade overlay">
                         <img class="card-img-top" src="../assets/images/prashant.jpeg" style="width:95%;" alt="BIKE"
-                            style="width: 95%;">
+                            style="width: 93%;">
                     </div>
                     <div class="card-body card-body-cascade text-center">
                         <h4 class="card-title"><strong>ACM - S WEBINAR</strong></h4>
