--- a/assets/event.html
+++ b/assets/event.html
@@ -362,7 +362,7 @@
                     </div>
                     <div class="card-body card-body-cascade text-center">
                         <h4 class="card-title"><strong>ACM - S WEBINAR</strong></h4>
-                        <h6 class="font-weight-bold indigo-text py-2">SPEAKER 06</h6>
+                        <h6 class="font-weight-bold indigo-text py-2">SPEAKER 07</h6>
                        <a href="#" style="color:white;"><button class="btn blue-gradient">WATCH VIDEO</button></a>
                     </div>
                 </div>
@@ -376,7 +376,7 @@
                     </div>
                     <div class="card-body card-body-cascade text-center">
                         <h4 class="card-title"><strong>ACM - S MASTERCLASS</strong></h4>
-                        <h6 class="font-weight-bold indigo-text py-2">SPEAKER 05</h6>
+                        <h6 class="font-weight-bold indigo-text py-2">SPEAKER 06</h6>
                         <a href="https://drive.google.com/file/d/18cVSTNR7KXWpSfsLXtRcZ6oN1heFiboG/view" style="color:white;"><button class="btn blue-gradient">WATCH VIDEO</button></a>
                     </div>
                 </div>
@@ -389,7 +389,7 @@
                     </div>
                     <div class="card-body card-body-cascade text-center">
                         <h4 class="card-title"><strong>ACM - S WEBINAR</strong></h4>
-                        <h6 class="font-weight-bold indigo-text py-2">SPEAKER 04</h6>
+                        <h6 class="font-weight-bold indigo-text py-2">SPEAKER 05</h6>
                         <a href="https://www.youtube.com/watch?v=RY4rab7dEyY" style="color:white;"><button class="btn blue-gradient">WATCH VIDEO</button></a>
                     </div>
                 </div>
@@ -402,7 +402,7 @@
                     </div>
                     <div class=" card-body card-body-cascade text-center">
                         <h4 class="card-title"><strong>ACM - S WEBINAR </strong></h4>
-                        <h6 class="font-weight-bold indigo-text py-2">SPEAKER 03</h6>
+                        <h6 class="font-weight-bold indigo-text py-2">SPEAKER 04</h6>
 
 
                         <a href="https://drive.google.com/file/d/1bTwwFgvsxK8z3SA7WoIxSX9BpkvLTPbF/view" style="color:white;"><button class="btn blue-gradient">WATCH VIDEO</button></a>
@@ -413,12 +413,12 @@
             <div class="col-sm-4" style="padding: 50px;" data-aos="flip-left">
                 <div class="card card-cascade">
                     <div class="view view-cascade overlay">
-                        <img class="card-img-top" src="../assets/images/prashant.jpeg" style="width:95%;" alt="BIKE"
+                        <img class="card-img-top" src="../assets/images/prashant.jpeg" alt="BIKE"
                             style="width: 93%;">
                     </div>
                     <div class="card-body card-body-cascade text-center">
                         <h4 class="card-title"><strong>ACM - S WEBINAR</strong></h4>
-                        <h6 class="font-weight-bold indigo-text py-2">SPEAKER 02</h6>
+                        <h6 class="font-weight-bold indigo-text py-2">SPEAKER 03</h6>
                         <a href="../moreinfo/speaker2.html" style="color:white;"><button class="btn blue-gradient">MORE</button></a>
                     </div>
                 </div>
@@ -427,11 +427,11 @@
             <div class="col-sm-4" style="padding: 50px;" data-aos="flip-left">
                 <div class="card card-cascade">
                     <div class="view view-cascade overlay">
-                        <img class="card-img-top" src="../assets/images/speaker1.jpeg" alt="BIKE" style="width: 95%;">
+                        <img class="card-img-top" src="../assets/images/speaker1.jpeg" alt="BIKE" style="width: 93%;">
                     </div>
                     <div class="card-body card-body-cascade text-center">
                         <h4 class="card-title"><strong>ACM - S WEBINAR</strong></h4>
-                        <h6 class="font-weight-bold indigo-text py-2">SPEAKER 01</h6>
+                        <h6 class="font-weight-bold indigo-text py-2">SPEAKER 02</h6>
                         <a href="https://www.youtube.com/watch?v=p46dD0Mxnyc&t=107s" style="color:white;"><button class="btn blue-gradient">WATCH VIDEO</button></a>
                     </div>
                 </div>
@@ -444,7 +444,7 @@
                     </div>
                     <div class=" card-body card-body-cascade text-center">
                         <h4 class="card-title"><strong>ACM WEBINAR</strong></h4>
-                        <h6 class="font-weight-bold indigo-text py-2">PROGRAMMING CONCEPTS</h6>
+                        <h6 class="font-weight-bold indigo-text py-2">SPEAKER 01</h6>
                         <a href="https://www.youtube.com/watch?v=44fTOE7uoOI" style="color:white;"><button class="btn blue-gradient">WATCH VIDEO</button></a>
                     </div>
                 </div>
