--- a/assets/event.html
+++ b/assets/event.html
@@ -323,8 +323,19 @@
 
             </div>
             <br>
-            <center><h3>We will update you soon!...</h3></center>
-           
+           <div class="col-sm-4" style="padding: 50px;" data-aos="flip-left" data-aos-delay="100">
+                <div class="card card-cascade">
+                    <div class="view view-cascade overlay">
+                        <img class="card-img-top" src="../assets/images/rashmi.jpeg" alt="rashmi"
+                            style="width: 95%;">
+                    </div>
+                    <div class="card-body card-body-cascade text-center">
+                        <h4 class="card-title"><strong>ACM - S WEBINAR</strong></h4>
+                        <h6 class="font-weight-bold indigo-text py-2">SPEAKER 08</h6>
+                       <a href="https://docs.google.com/forms/d/e/1FAIpQLSc5hotCrrv4ccTY4IApYoas_aqt0IqWcgbsLq8DIRY6FVyAhw/viewform" style="color:white;"><button class="btn blue-gradient">REGISTER</button></a>
+                    </div>
+                </div>
+            </div>
      
         </div>
         <div class="row">
