--- a/assets/event.html
+++ b/assets/event.html
@@ -374,7 +374,7 @@
                     <div class="card-body card-body-cascade text-center">
                         <h4 class="card-title"><strong>ACM - S WEBINAR</strong></h4>
                         <h6 class="font-weight-bold indigo-text py-2">SPEAKER 07</h6>
-                       <a href="#" style="color:white;"><button class="btn blue-gradient">WATCH VIDEO</button></a>
+                       <a href="https://drive.google.com/file/d/11rZJz3poRK6OCcom26pD7BvquiYZQ_bw/view?ts=5f059cd3" style="color:white;"><button class="btn blue-gradient">WATCH VIDEO</button></a>
                     </div>
                 </div>
             </div>
