--- a/assets/event.html
+++ b/assets/event.html
@@ -323,19 +323,7 @@
 
             </div>
             <br>
-           <div class="col-sm-4" style="padding: 50px;" data-aos="flip-left" data-aos-delay="100">
-                <div class="card card-cascade">
-                    <div class="view view-cascade overlay">
-                        <img class="card-img-top" src="../assets/images/rashmi.jpeg" alt="rashmi"
-                            style="width: 95%;">
-                    </div>
-                    <div class="card-body card-body-cascade text-center">
-                        <h4 class="card-title"><strong>ACM - S WEBINAR</strong></h4>
-                        <h6 class="font-weight-bold indigo-text py-2">SPEAKER 08</h6>
-                       <a href="https://docs.google.com/forms/d/e/1FAIpQLSc5hotCrrv4ccTY4IApYoas_aqt0IqWcgbsLq8DIRY6FVyAhw/viewform" style="color:white;"><button class="btn blue-gradient">REGISTER</button></a>
-                    </div>
-                </div>
-            </div>
+           
      
         </div>
         <div class="row">
@@ -364,6 +352,19 @@
                 <br>
                 <h3>&nbsp;COMPLETED EVENTS</h3>
                 <br>
+            </div>
+             <div class="col-sm-4" style="padding: 50px;" data-aos="flip-left" data-aos-delay="100">
+                <div class="card card-cascade">
+                    <div class="view view-cascade overlay">
+                        <img class="card-img-top" src="../assets/images/rashmi.jpeg" alt="rashmi"
+                            style="width: 95%;">
+                    </div>
+                    <div class="card-body card-body-cascade text-center">
+                        <h4 class="card-title"><strong>ACM - S WEBINAR</strong></h4>
+                        <h6 class="font-weight-bold indigo-text py-2">SPEAKER 08</h6>
+                       <a href="https://drive.google.com/file/d/1amuH13_ex9cVqi1ZAxzKE1cdro4AA72I/view?usp=drivesdk" style="color:white;"><button class="btn blue-gradient">WATCH VIDEO</button></a>
+                    </div>
+                </div>
             </div>
              <div class="col-sm-4" style="padding: 50px;" data-aos="flip-left" data-aos-delay="100">
                 <div class="card card-cascade">
