--- a/assets/event.html
+++ b/assets/event.html
@@ -320,7 +320,7 @@
             <div style="text-align: justify; margin-left: 35px;">
                 <br>
                 <h3>&nbsp;UPCOMING EVENTS</h3>
-
+              <center><h3>We will update you soon...</h3></center>
             </div>
             <br>
            
