--- a/assets/event.html
+++ b/assets/event.html
@@ -321,7 +321,7 @@
                 <br>
                 <h3>&nbsp;UPCOMING EVENTS</h3>
                 <br>
-              <center><h3>We will update you soon...</h3></center>
+              <center><h3><b>We will update you soon...</b></h3></center>
             </div>
             <br>
            
