--- a/assets/event.html
+++ b/assets/event.html
@@ -74,6 +74,9 @@
         .bg-grey {
             background-color: blue;
         }
+          .btn{
+          font-size:0.9em;
+        }
 
         @import url("https://fonts.googleapis.com/css2?family=Baloo+Paaji+2:wght@400;500&display=swap");
 
