--- a/assets/event.html
+++ b/assets/event.html
@@ -55,6 +55,13 @@
             font-weight: 400;
             margin-bottom: 30px;
         }
+          h2{
+        color:white;
+
+      }
+      h3{
+        color:white;
+      }
 
         .jumbotron {
             background-color: white;
