--- a/assets/event.html
+++ b/assets/event.html
@@ -532,7 +532,7 @@
 
 
     <hr>
-     <div class="footer" style="text-align: center;">
+     <div class="footer" style="text-align: center;color:white;">
         Made with ❤️ Follow us on !
         <ul class="social-icons">
             <li> <a href="https://github.com/acmsahyadritech/"> <i class="fa fa-github"></i> </a>
