--- a/assets/team.html
+++ b/assets/team.html
@@ -30,7 +30,7 @@
 
     <style>
         body {
-
+            
             line-height: 1.8;
             color: black;
             font-family: 'Nova Square';
@@ -260,7 +260,7 @@
 
 
 
-    <div id="rides" style="background: #03132d;">
+    <div id="rides" style="background-color: #03051e;;">
         <br>
         <br>
         <div style="text-align: center;">
