--- a/assets/event.html
+++ b/assets/event.html
@@ -324,7 +324,7 @@
                 
         </div>
 
-        <div class="row">
+       <!-- <div class="row">
 
 
             <div style="text-align: justify; margin-left: 35px;">
@@ -333,7 +333,7 @@
                 <br>
               <center><h3><b>We will update you soon...</b></h3></center>
             </div>
-        </div>
+        </div> -->
         <div class="row">
             <div style="text-align: justify; margin-left: 35px;">
                 </br>
