--- a/assets/event.html
+++ b/assets/event.html
@@ -29,7 +29,6 @@
 
     <style>
         body {
-            background-color: #222831;;
 
             line-height: 1.8;
             color: black;
@@ -40,6 +39,7 @@
             scroll-behavior: smooth;
         }
 
+
         h1 {
             font-size: 24px;
             text-transform: uppercase;
@@ -47,7 +47,9 @@
             font-weight: 600;
             margin-bottom: 30px;
         }
-
+        .rides{
+          background-color: #222831;
+         } 
         h4 {
             font-size: 19px;
             line-height: 1.375em;
@@ -532,7 +534,7 @@
 
 
     <hr>
-     <div class="footer" style="text-align: center;color:white;">
+     <div class="footer" style="text-align: center;">
         Made with ❤️ Follow us on !
         <ul class="social-icons">
             <li> <a href="https://github.com/acmsahyadritech/"> <i class="fa fa-github"></i> </a>
