--- a/assets/event.html
+++ b/assets/event.html
@@ -47,7 +47,7 @@
             font-weight: 600;
             margin-bottom: 30px;
         }
-        .rides{
+        #rides{
           background-color: #222831;
          } 
         h4 {
