--- a/assets/blog.html
+++ b/assets/blog.html
@@ -1,59 +1,136 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<html lang="en" >
 <head>
+  <meta charset="utf-8">
+  <title>
+      ACM SAHYADRI
+  </title>
+  <link rel="icon" href="./images/ACM logo sahyadri black.png" type="image/x-icon">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+  <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet" type="text/css">
+  <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet" type="text/css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
 
-    <title>
-        ACM SAHYADRI
-    </title>
-    <link rel="icon" href="./images/ACM logo sahyadri black.png" type="image/x-icon">
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.14.1/css/mdb.min.css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Nova+Square&display=swap" rel="stylesheet">
+  <script type="text/javascript"
+      src="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.14.1/js/mdb.min.js"></script>
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap">
+<style>
+  body {
+
+      line-height: 1.8;
+      color: black;
+      font-family: 'Nova Square';
+  }
+  html {
+  background: #f5f7f8;
+  font-family: system-ui;
+  -webkit-font-smoothing: antialiased;
+  padding: 20px 0;
+}
+
+header {
+  width: 90%;
+  max-width: 1240px;
+  margin: 0 auto;
+}
+
+.band {
+  width: 90%;
+  max-width: 1240px;
+  margin: 0 auto;
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: auto;
+  grid-gap: 20px;
+}
+@media (min-width: 30em) {
+  .band {
+    grid-template-columns: 1fr 1fr;
+  }
+}
+@media (min-width: 60em) {
+  .band {
+    grid-template-columns: repeat(4, 1fr);
+  }
+}
+
+.card {
+  background: white;
+  text-decoration: none;
+  color: #444;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+  display: -webkit-box;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+          flex-direction: column;
+  min-height: 100%;
+  position: relative;
+  top: 0;
+  -webkit-transition: all .1s ease-in;
+  transition: all .1s ease-in;
+  border-radius:1%;
+}
+.card:hover {
+  top: -2px;
+  box-shadow: 0 4px 5px rgba(0, 0, 0, 0.2);
+}
+.card article {
+  padding: 20px;
+  -webkit-box-flex: 1;
+          flex: 1;
+  display: -webkit-box;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+          justify-content: space-between;
+}
+.card h1 {
+  font-size: 20px;
+  margin: 0;
+  color: #333;
+}
+.card p {
+  -webkit-box-flex: 1;
+          flex: 1;
+  line-height: 1.4;
+}
+.card span {
+  font-size: 12px;
+  font-weight: bold;
+  color: #999;
+  text-transform: uppercase;
+  letter-spacing: .05em;
+  margin: 2em 0 0 0;
+}
+.card .thumb {
+  padding-bottom: 60%;
+  background-size: cover;
+  background-position: center center;
+}
+.profile{
 
 
 
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-    <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet" type="text/css">
-    <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet" type="text/css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
+}
 
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.14.1/css/mdb.min.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Nova+Square&display=swap" rel="stylesheet">
-    <script type="text/javascript"
-        src="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.14.1/js/mdb.min.js"></script>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap">
-
-    <style>
-        body {
-
-            line-height: 1.8;
-            color: black;
-            font-family: 'Nova Square';
-        }
-
-        html {
-            scroll-behavior: smooth;
-        }
-
-        h1 {
-            font-size: 24px;
-            text-transform: uppercase;
-            color: #0e080f;
-            font-weight: 600;
-            margin-bottom: 30px;
-        }
-
-        h4 {
-            font-size: 19px;
-            line-height: 1.375em;
-            color: #0e080f;
-            font-weight: 400;
-            margin-bottom: 30px;
-        }
-
+@media (min-width: 60em) {
+  .item-1 {
+    grid-column: 1 / span 2;
+  }
+  .item-1 h1 {
+    font-size: 24px;
+  }
+}
 
         @import url("https://fonts.googleapis.com/css2?family=Baloo+Paaji+2:wght@400;500&display=swap");
 
@@ -114,58 +191,8 @@
         * {
             box-sizing: border-box;
         }
-
-        /* .fa {
-
-            font-size: 15px;
-            left: 20px;
-            top: 20px;
-            text-align: center;
-            text-decoration: none;
-
-        }
-
-        .fa:hover {
-            opacity: 0.4;
-        }
-
-        .fa-facebook {
-            padding: 10px;
-            background: white;
-            color: blue;
-        }
-
-        .fa-instagram {
-            padding: 10px;
-            background: white;
-            color: blue;
-        }
-
-        .fa-twitter {
-            padding: 10px;
-            background: white;
-            color: blue;
-        }
-
-        .fa-linkedin {
-            padding: 10px;
-            background: white;
-            color: blue;
-        }
-
-        .fa-youtube {
-            padding: 10px;
-            background: white;
-            color: blue;
-        }
-
-        .fa-github {
-            padding: 10px;
-            background: white;
-            color: blue;
-        } */
-
         .navbar {
+           margin-top:-1.6%;
             margin-bottom: 0;
             background-color: black;
             z-index: 9999;
@@ -201,114 +228,215 @@
             margin-left: 0;
             margin-right: 0;
         }
+
         .ml2 {
   font-weight: 900;
   font-size: 2em;
-}
+  color:white;
+  margin-top:-0.4%;
+ }
 
-.ml2 .letter {
+ .ml2 .letter {
   display: inline-block;
   line-height: 1em;
-}
-    </style>
+ }
+ .downs{
+   height:3%;
+   width:100%;
+   background-color:#092532;
+ }
+ .profile-img1 {
+   height: 45px;
+   width: 45px;
+    background: url('https://avatars2.githubusercontent.com/u/47688507?s=460&u=b0da6e832bfabb96165017c61838a88453cb5739&v=4');
+    background-size: cover;
+    background-position: center;
+    position: absolute;
+    top: 87.4%;
+    left: 87%;
+    border-radius: 50%;
+    box-shadow: 3px 3px 7px rgba(0,0,0,0.5);
+  }
+  .profile-img2 {
+     height: 45px;
+     width: 45px;
+     background: url('https://avatars2.githubusercontent.com/u/47688507?s=460&u=b0da6e832bfabb96165017c61838a88453cb5739&v=4');
+     background-size: cover;
+     background-position: center;
+     position: absolute;
+     top: 87%;
+     left: 77%;
+     border-radius: 80%;
+     box-shadow: 3px 3px 7px rgba(0,0,0,0.5);
+   }
+   @media (max-width:600px) {
+     .profile-img1{
+       position: absolute;
+       top: 83%;
+       left: 77%;
+     }
+   }
+   @media (min-width:550px) and (max-width:900px) {
+     .profile-img1{
+       position: absolute;
+       top: 87%;
+       left: 77%;
+     }
+   }
+</style>
+
 </head>
+<body  id="myPage" data-spy="scroll" data-target=".navbar" data-offset="60">
 
-<body id="myPage" data-spy="scroll" data-target=".navbar" data-offset="60">
+<nav class="navbar navbar-default">
+    <div class="container">
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
 
-    <nav class="navbar navbar-default">
-        <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
+            <img src="./images/title logo.png" style="width: 65px;">
 
-                <img src="./images/title logo.png" style="width: 65px;">
-
-            </div>
-            <div class="collapse navbar-collapse" id="myNavbar">
-                <ul class="nav navbar-nav navbar-right">
-                    <li><a href="../index.html">HOME</a></li>
-                    <li><a href="event.html">EVENTS</a></li>
-                    <li><a href="../assets/team.html">TEAM</a></li>
-                    <li><a href="blog.html">BLOGS</a></li>
-                    <li><a href="contactus.html">CONTACT</a></li>
-
-
-
-
-                </ul>
-            </div>
         </div>
-    </nav>
-    <div style="text-align: center;">
-        <b>
-            <br>
-            <h1 class="ml2">BLOGS WRITTEN BY US!</h1>
-        </b>
+        <div class="collapse navbar-collapse" id="myNavbar">
+            <ul class="nav navbar-nav navbar-right">
+                <li><a href="../index.html">HOME</a></li>
+                <li><a href="event.html">EVENTS</a></li>
+                <li><a href="../assets/team.html">TEAM</a></li>
+                <li><a href="blog.html">BLOGS</a></li>
+                <li><a href="contactus.html">CONTACT</a></li>
+
+
+
+
+            </ul>
+        </div>
     </div>
-    <hr>
+</nav>
+<div style="background-color: #092532;">
 
-    <div style="text-align: center;">
+<div style="text-align: center;">
+    <b>
         <br>
-        <br>
-        <br>
+        <h1 class="ml2">BLOGS BY US!</h1>
+    </b>
+</div>
+<hr style="width:60%">
+<div class="band">
+  <div class="item-1">
+    <a href="https://medium.com/@kamathsamarth/cow-a-computer-language-be6c1e7cc4fa" class="card">
+      <div class="thumb" style="background-image: url(https://miro.medium.com/max/1050/1*b8pvEq2Z0TEpr9FW73KRQQ@2x.png);"></div>
+      <article>
+        <h1>Cow | A Computer Language</h1>
+        <span>Samarth Kamath</span>
+        <div class="profile-img1"></div>
+
+      </article>
+    </a>
+  </div>
+  <div class="item-2">
+    <a href="https://medium.com/@kamathsamarth/boon-of-technology-1a0d8d305c6a" class="card">
+      <div class="thumb" style="background-image: url(https://i.hurimg.com/i/hdn/75/0x0/5da425cc0f25441cf4279f1d.jpg);"></div>
+      <article>
+        <h1>Boon of Technology</h1>
+        <p style="margin-top:5%">Have you imagined to have an extra sense organ that could either increase your current abilities or substitute your inability?</p>
+        <span>Samarth Kamath</span>
+        <div class="profile-img2"></div>
+
+      </article>
+    </a>
+  </div>
+  <div class="item-3">
+    <a href="https://medium.com/@sushmaberkala2000/mobile-video-streaming-4f9d8d39bba" class="card">
+      <div class="thumb" style="background-image: url(https://miro.medium.com/max/1050/1*3XCc1fkKQ7Ebl_L-14h8RA.jpeg);"></div>
+      <article>
+        <h1>Mobile video streaming</h1>
+        <p style="margin-top:5%">Streaming is a classical technique to watch video or listen to audio without actually downloading it.</p>
+        <span>Sushma Berkala</span>
+
+      </article>
+    </a>
+  </div>
+  <!--
+  <div class="item-4">
+    <a href="https://webdesign.tutsplus.com/tutorials/how-to-code-a-scrolling-alien-lander-website--cms-26826" class="card">
+      <div class="thumb" style="background-image: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/210284/landing.png);"></div>
+      <article>
+        <h1>How to Code a Scrolling “Alien Lander” Website</h1>
+        <p>We’ll be putting things together so that as you scroll down from the top of the page you’ll see an “Alien Lander” making its way to touch down.</p>
+        <span>Kezz Bracey</span>
+      </article>
+    </a>
+  </div>
+  <div class="item-5">
+    <a href="https://design.tutsplus.com/tutorials/stranger-things-inspired-text-effect--cms-27139" class="card">
+      <div class="thumb" style="background-image: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/210284/strange.jpg);"></div>
+      <article>
+        <h1>How to Create a “Stranger Things” Text Effect in Adobe Photoshop</h1>
+        <span>Rose</span>
+      </article>
+    </a>
+  </div>
+  <div class="item-6">
+    <a href="https://photography.tutsplus.com/articles/5-inspirational-business-portraits-and-how-to-make-your-own--cms-27338" class="card">
+      <div class="thumb" style="background-image: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/210284/flor.jpg);"></div>
+      <article>
+        <h1>5 Inspirational Business Portraits and How to Make Your Own</h1>
+
+        <span>Marie Gardiner</span>
+      </article>
+    </a>
+  </div> -->
+
+</div>
+</div>
+
+<div class="downs">
+.
+</div>
+
+ <div class="footer" style="text-align: center;margin-top:2%">
+    Made with ❤️ Follow us on !
+    <ul class="social-icons">
+        <li> <a href="https://github.com/acmsahyadritech/"> <i class="fa fa-github"></i> </a>
+        </li>
+        <li> <a href="https://www.facebook.com/acmsahyadri/"> <i class="fa fa-facebook"></i></a></li>
+        <li> <a href="http://www.twitter.com/AcmSahyadri"> <i class="fa fa-twitter"></i></a></li>
+        <li> <a href="https://www.youtube.com/channel/UC5EtaZ54RIvnqJMrEDAzcag"> <i class="fa fa-youtube"></i></a>
+        </li>
+        <li><a href="http://linkedin.com/company/acm-sahyadri"> <i class="fa fa-linkedin"></i></a></li>
+        <li><a href="https://instagram.com/acm_sahyadri?igshid=1d8pmqhknfr8o"> <i class="fa fa-instagram"></i></a>
+        </li>
+    </ul>
+
+</div>
 
 
-        <b>
-            <h1>COMING SOON ! ...</h1>
-        </b>
-        <br>
-        <br>
-
-        <br>
-    </div>
-    <hr>
-     <div class="footer" style="text-align: center;">
-        Made with ❤️ Follow us on !
-        <ul class="social-icons">
-            <li> <a href="https://github.com/acmsahyadritech/"> <i class="fa fa-github"></i> </a>
-            </li>
-            <li> <a href="https://www.facebook.com/acmsahyadri/"> <i class="fa fa-facebook"></i></a></li>
-            <li> <a href="http://www.twitter.com/AcmSahyadri"> <i class="fa fa-twitter"></i></a></li>
-            <li> <a href="https://www.youtube.com/channel/UC5EtaZ54RIvnqJMrEDAzcag"> <i class="fa fa-youtube"></i></a>
-            </li>
-            <li><a href="http://linkedin.com/company/acm-sahyadri"> <i class="fa fa-linkedin"></i></a></li>
-            <li><a href="https://instagram.com/acm_sahyadri?igshid=1d8pmqhknfr8o"> <i class="fa fa-instagram"></i></a>
-            </li>
-        </ul>
-
-    </div>
-    <br>
-
- <script>
-     // Wrap every letter in a span
+<script>
+ // Wrap every letter in a span
 var textWrapper = document.querySelector('.ml2');
 textWrapper.innerHTML = textWrapper.textContent.replace(/\S/g, "<span class='letter'>$&</span>");
 
 anime.timeline({loop: false})
 .add({
-  targets: '.ml2 .letter',
-  scale: [2,1],
-  opacity: [0,1],
-  translateZ: 0,
-  easing: "easeOutExpo",
-  duration: 950,
-  delay: (el, i) => 70*i
+targets: '.ml2 .letter',
+scale: [2,1],
+opacity: [0,1],
+translateZ: 0,
+easing: "easeOutExpo",
+duration: 950,
+delay: (el, i) => 70*i
 }).add({
-  targets: '.ml2',
-  opacity: 1,
-  duration: 1000,
-  easing: "easeOutExpo",
-  delay: 1000
+targets: '.ml2',
+opacity: 1,
+duration: 1000,
+easing: "easeOutExpo",
+delay: 1000
 });
-     </script>
-
-
-
+ </script>
 
 
 </body>
-
 </html>
