--- a/assets/blog.html
+++ b/assets/blog.html
@@ -192,7 +192,7 @@ header {
             box-sizing: border-box;
         }
         .navbar {
-           margin-top:-1.6%;
+           margin-top:-20px;
             margin-bottom: 0;
             background-color: black;
             z-index: 9999;
