--- a/assets/blog.html
+++ b/assets/blog.html
@@ -269,12 +269,25 @@ header {
      border-radius: 80%;
      box-shadow: 3px 3px 7px rgba(0,0,0,0.5);
    }
+   .profile-img3 {
+      height: 45px;
+      width: 45px;
+      background: url('https://media-exp1.licdn.com/dms/image/C5103AQE4tt2kwkyGFQ/profile-displayphoto-shrink_400_400/0?e=1600300800&v=beta&t=u_jNS4YOWNl_hr6On4bXj8bFz0rl2XHlyzmnfgoODbI');
+      background-size: cover;
+      background-position: center;
+      position: absolute;
+      top: 87%;
+      left: 77%;
+      border-radius: 80%;
+      box-shadow: 3px 3px 7px rgba(0,0,0,0.5);
+    }
    @media (max-width:600px) {
      .profile-img1{
        position: absolute;
        top: 83%;
        left: 77%;
      }
+
    }
    @media (min-width:550px) and (max-width:900px) {
      .profile-img1{
@@ -354,7 +367,9 @@ header {
       <article>
         <h1>Mobile video streaming</h1>
         <p style="margin-top:5%">Streaming is a classical technique to watch video or listen to audio without actually downloading it.</p>
-        <span>Sushma Berkala</span>
+        <span>Sushma Nayak</span>
+        <div class="profile-img3"></div>
+
 
       </article>
     </a>
