--- a/assets/blog.html
+++ b/assets/blog.html
@@ -287,8 +287,16 @@ header {
        top: 83%;
        left: 77%;
      }
-
-   }
+     .profile-img2{
+       position: absolute;
+      top: 87%;
+      left: 78.5%;
+     }
+     .profile-img3{
+       position: absolute;
+      top: 87%;
+      left: 78.5%;
+     }
    @media (min-width:550px) and (max-width:900px) {
      .profile-img1{
        position: absolute;
@@ -353,7 +361,7 @@ header {
     <a href="https://medium.com/@kamathsamarth/boon-of-technology-1a0d8d305c6a" class="card">
       <div class="thumb" style="background-image: url(https://i.hurimg.com/i/hdn/75/0x0/5da425cc0f25441cf4279f1d.jpg);"></div>
       <article>
-        <h1>Boon of Technology</h1>
+        <h1>Boon of the Technology</h1>
         <p style="margin-top:5%">Have you imagined to have an extra sense organ that could either increase your current abilities or substitute your inability?</p>
         <span>Samarth Kamath</span>
         <div class="profile-img2"></div>
