--- a/assets/blog.html
+++ b/assets/blog.html
@@ -297,7 +297,7 @@ header {
       top: 87%;
       left: 80.5%;
      }
-   @media (min-width:500px) and (max-width:900px) {
+   @media screen and (max-width:900px) and (min-width:550px) {
      .profile-img1{
        position: absolute;
        top: 87%;
