--- a/assets/blog.html
+++ b/assets/blog.html
@@ -281,21 +281,38 @@ header {
       border-radius: 80%;
       box-shadow: 3px 3px 7px rgba(0,0,0,0.5);
     }
+    .profile-img4 {
+       height: 45px;
+       width: 45px;
+       background: url('https://media-exp1.licdn.com/dms/image/C5603AQGBzJxoqAFsOA/profile-displayphoto-shrink_200_200/0?e=1598486400&v=beta&t=WqWM9vJYsOO0V1LjeVzYgUDNouDjEyNO-hpgZ5FHvew');
+       background-size: cover;
+       background-position: center;
+       position: absolute;
+       top: 87%;
+       left: 77%;
+       border-radius: 80%;
+       box-shadow: 3px 3px 7px rgba(0,0,0,0.5);
+     }
    @media (max-width:550px) {
      .profile-img1{
        position: absolute;
        top: 83%;
-       left: 80%;
+       left: 81%;
      }
      .profile-img2{
        position: absolute;
       top: 87%;
-      left: 80%;
+      left: 81%;
      }
      .profile-img3{
        position: absolute;
       top: 87%;
-      left: 80.5%;
+      left: 81.5%;
+     }
+     .profile-img4{
+       position: absolute;
+      top: 87%;
+      left: 81.5%;
      }
   }
    @media screen and (max-width:900px) and (min-width:560px) {
@@ -383,17 +400,20 @@ header {
       </article>
     </a>
   </div>
-  <!--
+
   <div class="item-4">
-    <a href="https://webdesign.tutsplus.com/tutorials/how-to-code-a-scrolling-alien-lander-website--cms-26826" class="card">
-      <div class="thumb" style="background-image: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/210284/landing.png);"></div>
+    <a href="https://medium.com/@vishwaskamath58/mobile-app-development-with-flutter-f67246e3c57c" class="card">
+      <div class="thumb" style="background-image: url(https://miro.medium.com/max/1050/0*rci9V3b_YRalBOUj.png);"></div>
       <article>
-        <h1>How to Code a Scrolling “Alien Lander” Website</h1>
-        <p>We’ll be putting things together so that as you scroll down from the top of the page you’ll see an “Alien Lander” making its way to touch down.</p>
-        <span>Kezz Bracey</span>
+        <h1>Mobile App development with Flutter</h1>
+        <p style="margin-top:5%">As of 2020, there are 1.8 million apps available on the apple app store while a whopping 2.5 million are available on google play store.</p>
+        <span>Vishwas Kamath</span>
+        <div class="profile-img4"></div>
+
       </article>
     </a>
   </div>
+  <!--
   <div class="item-5">
     <a href="https://design.tutsplus.com/tutorials/stranger-things-inspired-text-effect--cms-27139" class="card">
       <div class="thumb" style="background-image: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/210284/strange.jpg);"></div>
@@ -408,7 +428,6 @@ header {
       <div class="thumb" style="background-image: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/210284/flor.jpg);"></div>
       <article>
         <h1>5 Inspirational Business Portraits and How to Make Your Own</h1>
-
         <span>Marie Gardiner</span>
       </article>
     </a>
