--- a/index.html
+++ b/index.html
@@ -23,11 +23,16 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.14.1/css/mdb.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Nova+Square&display=swap" rel="stylesheet">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+
 
     <script type="text/javascript"
         src="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.14.1/js/mdb.min.js"></script>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap">
      <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+
 
     <style>
         body {
@@ -63,49 +68,40 @@
 
 
         /* .fa {
-
             font-size: 15px;
             left: 20px;
             top: 20px;
             text-align: center;
             text-decoration: none;
-
         }
-
         .fa:hover {
             opacity: 0.4;
         }
-
         .fa-facebook {
             padding: 10px;
             background: white;
             color: blue;
         }
-
         .fa-instagram {
             padding: 10px;
             background: white;
             color: blue;
         }
-
         .fa-twitter {
             padding: 10px;
             background: white;
             color: blue;
         }
-
         .fa-linkedin {
             padding: 10px;
             background: white;
             color: blue;
         }
-
         .fa-youtube {
             padding: 10px;
             background: white;
             color: blue;
         }
-
         .fa-github {
             padding: 10px;
             background: white;
@@ -242,6 +238,7 @@
   display: inline-block;
   line-height: 1em;
 }
+
     </style>
 </head>
 
@@ -275,13 +272,13 @@
     <div style="padding: 20px; background: black; ">
         <marquee scrollamount="11" loop="infinite" onmouseover="this.stop();" onmouseout="this.start();">
             <center style="margin-top: 20px; margin-bottom: 20px;">
-                
-                <img src="./assets/images/slide1.jpeg" alt="inaug1" style="width:320px; height: 200px;">
-                <img src="./assets/images/slide2.jpeg" alt="inaug1" style="width:320px; height: 200px;">
-                <img src="./assets/images/slide3.jpeg" alt="inaug1" style="width:320px; height: 200px;">
-                <img src="./assets/images/slide4.jpeg" alt="inaug1" style="width:320px; height: 200px;">
-                <img src="./assets/images/slide5.jpeg" alt="inaug1" style="width:320px; height: 200px;">
-                <img src="./assets/images/slide6.jpg" alt="inaug1" style="width:320px; height: 200px;">
+
+                <img src="./assets/images/slide1.jpeg" alt="inaug1" style="width:370px; height: 230px;">
+                <img src="./assets/images/slide2.jpeg" alt="inaug1" style="width:370px; height: 230px;">
+                <img src="./assets/images/slide3.jpeg" alt="inaug1" style="width:370px; height: 230px;">
+                <img src="./assets/images/slide4.jpeg" alt="inaug1" style="width:370px; height: 230px;">
+                <img src="./assets/images/slide5.jpeg" alt="inaug1" style="width:370px; height: 230px;">
+                <img src="./assets/images/slide6.jpg" alt="inaug1" style="width:370px; height: 230px;">
 
 
             </center>
@@ -290,21 +287,20 @@
     </div>
 
 
-
     <div class="about" style="margin: 20px  20px; text-align: center;">
-        <br>
+
         <h2 class ="ml2" style="margin-bottom:30px">ACM-SAHYADRI CHAPTER</h2>
         <hr>
         <div class="row">
             <div class="col-sm-6 data-aos="zoom-in" data-aos-offset="50">
-                <br>
-                <br>
+
+
                 <a href="https://www.acm.org/"><img src="./assets/images/acm.png" alt="logo"
-                        style="align-content: center; width: 100%;"> </a>
+                        style="align-content: center; width: 85%;margin-top:8%"> </a>
 
             </div>
             <div class="col-sm-6"  data-aos="fade-up" style="text-align: justify;">
-                <br>
+
                 <p style="font-size: 20px">
                     ACM, the world&#39;s largest educational and scientific computing society, delivers resources that
                     advance computing as a science and a profession. ACM provides the computing field's premier Digital
@@ -313,12 +309,12 @@
                 </p>
             </div>
         </div>
-        <br>
+
     </div>
     <hr>
     <section id="about">
         <div class="about" style="margin: 20px  20px; text-align: center;">
-            <br>
+
             <div data-aos="zoom-in" data-aos-offset="250" style="text-align: center;">
                 <img src="./assets/images/ACM logo sahyadri black.png" alt="logo"
                     style="align-content: center; width: 300px;">
@@ -328,8 +324,7 @@
                 <div data-aos="fade-up" data-aos-offset="150" class="col-sm-6">
 
                     <br>
-                    <br>
-                    <br>
+                    
 
                     <p style="font-size: 20px; text-align: justify;">
                         We see a world where computing helps solve tomorrow’s problems – where we use our knowledge and
@@ -441,7 +436,11 @@
         </div>
         <br>
     </div>
-    <hr>
+
+
+
+
+
     <div class="footer" style="text-align: center;">
         Made with ❤️ Follow us on !
         <ul class="social-icons">
