--- a/index.html
+++ b/index.html
@@ -238,6 +238,11 @@
   display: inline-block;
   line-height: 1em;
 }
+ @media (max-width:550px){
+     .proper{
+         margin-top:0%;
+     }
+        }
 
     </style>
 </head>
@@ -292,11 +297,11 @@
         <h2 class ="ml2" style="margin-bottom:30px">ACM-SAHYADRI CHAPTER</h2>
         <hr>
         <div class="row">
-            <div class="col-sm-6 data-aos="zoom-in" data-aos-offset="50">
+            <div class="col-sm-6 proper data-aos="zoom-in" data-aos-offset="50">
 
 
                 <a href="https://www.acm.org/"><img src="./assets/images/acm.png" alt="logo"
-                        style="align-content: center; width: 85%;margin-top:2%"> </a>
+                        style="align-content: center; width: 85%;margin-top:8%"> </a>
 
             </div>
             <div class="col-sm-6"  data-aos="fade-up" style="text-align: justify;">
