--- a/assets/contactus.html
+++ b/assets/contactus.html
@@ -19,7 +19,8 @@
   select,
     textarea{
       color: white;
-      font-family: 'Comfortaa', Arial, sans-serif;
+      font-family: 'Nova Square';
+     /*font-family: 'Comfortaa', Arial, sans-serif;*/
       font-size: 17px;
       line-height: 1.5;
 
