--- a/assets/contactus.html
+++ b/assets/contactus.html
@@ -19,8 +19,8 @@
   select,
     textarea{
       color: white;
-      font-family: 'Nova Square';
-     /*font-family: 'Comfortaa', Arial, sans-serif;*/
+      
+     font-family: 'Comfortaa', Arial, sans-serif;
       font-size: 17px;
       line-height: 1.5;
 
@@ -100,7 +100,7 @@
             line-height: 1.42857143 !important;
             letter-spacing: 4px;
             border-radius: 0;
-            font-family: 'Nova Square';
+            font-family: 'Nova Square'; !important
 
 
         }
