--- a/assets/contactus.html
+++ b/assets/contactus.html
@@ -146,51 +146,8 @@
         }
 </style>
   <body >
-<!--
-    <div class="bg-img">
-    <nav class="navbar navbar-inverse">
-      <div class="container-fluid">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="#">ACM-SAHYADRI</a>
-        </div>
-        <div class="collapse navbar-collapse" id="myNavbar">
-          <ul class="nav navbar-nav">
-            <li class="active">
-            <a href="index.html">Home</a></li>
-            <li>
-              <a  href="#">About ACM</a>
-             <ul class="dropdown-menu">
-                <li><a href="#">Predictive Analysis</a> </li>
-                <li><a href="doctor.html">Doctors</a></li>
-                <li><a href="#">Hospitals</a></li>
-                <li><a href="#">Fitness Centers</a></li>
-                <li><a href="yoga.html">Yoga Centers</a></li>
-                <li><a href="#">Medical Supplements</a></li>
-                <li><a href="#">Fitness Equipments</a></li>
-              </ul>
-            </li>
-            <li><a href="#">Events</a></li>
-            <li><a href="Team.html">Team</a></li>
-            <li><a href="team.html">Blogs</a> </li>
-            <li><a href="ContactUs.html">Contact Us</a></li>
-          </ul>
-         <ul class="nav navbar-nav navbar-right">
-            <li><a href="signup.html"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
-            <li><a href="signin.html"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
-          </ul>
 
-        </div>
-      </div>
-
-    </nav>
-
-    </div>
--->  <nav class="navbar navbar-default">
+ <nav class="navbar navbar-default">
       <div class="container">
           <div class="navbar-header">
               <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
