--- a/assets/contactus.html
+++ b/assets/contactus.html
@@ -145,7 +145,7 @@
 
         }
 </style>
-  <body >
+  <body data-spy="scroll" data-target=".navbar" data-offset="60" >
 
  <nav class="navbar navbar-default">
       <div class="container">
