--- a/assets/contactus.html
+++ b/assets/contactus.html
@@ -100,7 +100,7 @@
             line-height: 1.42857143 !important;
             letter-spacing: 4px;
             border-radius: 0;
-            font-family: 'Nova Square'; !important
+            
 
 
         }
@@ -144,6 +144,9 @@
           }
 
         }
+     #myNavbar{
+       font-family: 'Nova Square'; !important
+  }
 </style>
   <body data-spy="scroll" data-target=".navbar" data-offset="60" >
 
