--- a/assets/contactus.html
+++ b/assets/contactus.html
@@ -102,7 +102,6 @@
             border-radius: 0;
             
 
-
         }
 
         .navbar li a,
@@ -145,7 +144,7 @@
 
         }
      #myNavbar{
-       font-family: 'Nova Square'; !important
+       font-family: 'Comfortaa', Arial, sans-serif; !important
   }
 </style>
   <body data-spy="scroll" data-target=".navbar" data-offset="60" >
