--- a/assets/contactus.html
+++ b/assets/contactus.html
@@ -83,7 +83,16 @@
      height: 700px;
    }
 }
-
+@media screen and (max-width: 740px){
+ .depth{
+   height: 500px;
+ }
+}
+@media (min-width: 1000px){
+ .depth{
+   height: 500px;
+ }
+}
 
 #author a{
   color: #000;
@@ -179,7 +188,7 @@
     <div class="row" id="contatti">
     <div class="container mt-5" >
 
-        <div class="row" style="height:500px;">
+        <div class="row depth">
           <div class="col-md-6 maps" id="map" >
              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7779.209919046349!2d74.92022255717124!3d12.868772500810413!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xe93953598f53c53c!2sSahyadri%20College%20of%20Engineering%20%26%20Management!5e0!3m2!1skn!2sin!4v1583333893183!5m2!1skn!2sin"> frameborder="0" style="border:0" allowfullscreen></iframe>
           </div>
