--- a/assets/contactus.html
+++ b/assets/contactus.html
@@ -84,6 +84,7 @@
    }
 }
 
+
 #author a{
   color: #000;
   text-decoration: none;
@@ -178,7 +179,7 @@
     <div class="row" id="contatti">
     <div class="container mt-5" >
 
-        <div class="row" style="width:500px">
+        <div class="row" style="height:500px;">
           <div class="col-md-6 maps" id="map" >
              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7779.209919046349!2d74.92022255717124!3d12.868772500810413!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xe93953598f53c53c!2sSahyadri%20College%20of%20Engineering%20%26%20Management!5e0!3m2!1skn!2sin!4v1583333893183!5m2!1skn!2sin"> frameborder="0" style="border:0" allowfullscreen></iframe>
           </div>
@@ -211,7 +212,6 @@
                     <textarea class="form-control" id="exampleFormControlTextarea1" placeholder="Suggestions" rows="3" required></textarea>
                   </div>
                 </div>
-
                 <div class="col-12">
                   <button class="btn btn-light" style="color:black" type="submit">SUBMIT</button>
                 </div>
