--- a/assets/contactus.html
+++ b/assets/contactus.html
@@ -19,7 +19,7 @@
   select,
     textarea{
       color: white;
-      
+
      font-family: 'Comfortaa', Arial, sans-serif;
       font-size: 17px;
       line-height: 1.5;
@@ -51,6 +51,13 @@
     width: 100%;
     height: 450px;
   }
+  .forms{
+    width:100%;
+  }
+  .links{
+    margin-left:4%
+  }
+
  }
 
 
@@ -63,6 +70,12 @@
      height: 450px;
 
    }
+   .links{
+     margin-left:4%
+   }
+   .forms{
+     width:100%;
+   }
  }
 
 @media (min-width: 768px) {
@@ -71,9 +84,23 @@
 
   #contatti .maps iframe{
     width: 100%;
-    height: 850px;
+    height: 800px;
+  }
+  .links{
+    margin-left:4%
   }
 }
+
+
+   @media (min-width: 720px) and (max-width:990px) {
+     .links{
+       margin-left: 130px;
+       margin-top: 10%;
+     }
+
+      }
+
+
 
 @media (min-width: 992px) {
   #contatti{padding-bottom: 200px;}
@@ -83,6 +110,13 @@
      height: 700px;
    }
 }
+@media (max-width: 740px) {
+.depth{
+  height:500px;
+}
+}
+
+
 
 
 #author a{
@@ -100,7 +134,7 @@
             line-height: 1.42857143 !important;
             letter-spacing: 4px;
             border-radius: 0;
-            
+
 
         }
 
@@ -135,14 +169,9 @@
         background-repeat: no-repeat;
         position: relative;
         }
-        @media screen and (min-width: 900px) {
-          #map{
-            width:40%;
-            margin-top:4%;
-          }
-          }
 
-        }
+
+
      #myNavbar{
        font-family: 'Comfortaa', Arial, sans-serif; !important
   }
@@ -179,7 +208,7 @@
     <div class="row" id="contatti">
     <div class="container mt-5" >
 
-        <div class="row" style="height:500px;">
+        <div class="row depth" >
           <div class="col-md-6 maps" id="map" >
              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7779.209919046349!2d74.92022255717124!3d12.868772500810413!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xe93953598f53c53c!2sSahyadri%20College%20of%20Engineering%20%26%20Management!5e0!3m2!1skn!2sin!4v1583333893183!5m2!1skn!2sin"> frameborder="0" style="border:0" allowfullscreen></iframe>
           </div>
@@ -218,8 +247,8 @@
               </div>
             </form>
           -->
-          <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfaALut5CiELIWEnLfp5GUOv1P6QfLndaEUbLLgP4C3i7C-DQ/viewform?embedded=true" width="100%" height="450" frameborder="0" marginheight="0" marginwidth="0" style="margin-top:5%;">Loading…</iframe>
-            <div class="text-white" style="margin-left:3%">
+          <iframe class="forms" src="https://docs.google.com/forms/d/e/1FAIpQLSfaALut5CiELIWEnLfp5GUOv1P6QfLndaEUbLLgP4C3i7C-DQ/viewform?embedded=true"  height="450" frameborder="0" marginheight="0" marginwidth="0" style="margin-top:5%;">Loading…</iframe>
+            <div class="text-white links">
             <h2 class="text-uppercase mt-4 font-weight-bold">MEET US!</h2>
             <i class="fab fa-instagram"></i><a href="https://instagram.com/acm_sahyadri?igshid=1d8pmqhknfr8o">ACM-SAHYADRI</a><br>
             <i class="fas fa-phone mt-3"></i> <a href="tel:+">+917019252847</a><br>
@@ -227,7 +256,7 @@
             <i class="fa fa-envelope mt-3"></i> <a href="mailto:acmsahyadri@gmail.com">acmsahyadri@gmail.com</a><br>
 
 
-            <div class="my-4">
+            <div class="my-4 ">
             <a href="https://www.facebook.com/acmsahyadri/"><i class="fab fa-facebook fa-3x pr-4"></i></a>
             <a href="http://linkedin.com/company/acm-sahyadri"><i class="fab fa-linkedin fa-3x"></i></a>
             <a href="https://instagram.com/acm_sahyadri?igshid=1d8pmqhknfr8o"><i class="fab fa-instagram fa-3x"></i></a>
