--- a/assets/contactus.html
+++ b/assets/contactus.html
@@ -117,7 +117,8 @@
 }
  @media (min-width:1134px){
    #map{
-     margin-left:-15px !important;
+     margin-left:0px !important;
+     width:80% !important;
    }
   }
 
