--- a/assets/contactus.html
+++ b/assets/contactus.html
@@ -54,10 +54,6 @@
   .forms{
     width:100%;
   }
-  .links{
-    margin-left:4%
-  }
-
  }
 
 
@@ -70,9 +66,7 @@
      height: 450px;
 
    }
-   .links{
-     margin-left:4%
-   }
+   
    .forms{
      width:100%;
    }
@@ -86,15 +80,13 @@
     width: 100%;
     height: 800px;
   }
-  .links{
-    margin-left:4%
-  }
+  
 }
 
 
    @media (min-width: 720px) and (max-width:990px) {
      .links{
-       margin-left: 130px;
+       
        margin-top: 10%;
      }
 
@@ -254,6 +246,7 @@
             </form>
           -->
           <iframe class="forms" src="https://docs.google.com/forms/d/e/1FAIpQLSfaALut5CiELIWEnLfp5GUOv1P6QfLndaEUbLLgP4C3i7C-DQ/viewform?embedded=true"  height="450" frameborder="0" marginheight="0" marginwidth="0" style="margin-top:5%;">Loading…</iframe>
+            <center>
             <div class="text-white links">
             <h2 class="text-uppercase mt-4 font-weight-bold">MEET US!</h2>
             <i class="fab fa-instagram"></i><a href="https://instagram.com/acm_sahyadri?igshid=1d8pmqhknfr8o">ACM-SAHYADRI</a><br>
@@ -268,7 +261,7 @@
             <a href="https://instagram.com/acm_sahyadri?igshid=1d8pmqhknfr8o"><i class="fab fa-instagram fa-3x"></i></a>
             <a href="https://www.youtube.com/channel/UC5EtaZ54RIvnqJMrEDAzcag"><i class="fab fa-youtube fa-3x"></i></a>
             <a href="https://github.com/acmsahyadritech/acm"><i class="fab fa-github fa-3x"></i></a>
-
+              </center>
             </div>
             </div>
           </div>
