--- a/assets/contactus.html
+++ b/assets/contactus.html
@@ -194,11 +194,7 @@
                   <li><a href="event.html">EVENTS</a></li>
                   <li><a href="team.html">TEAM</a></li>
                   <li><a href="blog.html">BLOGS</a></li>
-                  <li><a href="#">CONTACT</a></li>
-
-
-
-
+                  <li><a href="contactus.html">CONTACT</a></li>
               </ul>
           </div>
       </div>
