--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
 
 
                 <a href="https://www.acm.org/"><img src="./assets/images/acm.png" alt="logo"
-                        style="align-content: center; width: 85%;margin-top:5%"> </a>
+                        style="align-content: center; width: 85%;margin-top:5%;margin-bottom:3%"> </a>
 
             </div>
             <div class="col-sm-6"  data-aos="fade-up" style="text-align: justify;">
