--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@
 
                 </div>
 
-                <div class="col-sm-6"  data-aos="zoom-in" data-aos-delay="0" data-aos-duration="400" style="text-align: center;">
+                <div class="col-sm-6"  data-aos="zoom-in" data-aos-delay="0" data-aos-duration="400" style="text-align: center;margin-top:-4%">
 
                     <img src="./assets/images/Sahyadri illustration@4x@2x.png" alt="image" style="width: 100%; ">
 
