--- a/index.html
+++ b/index.html
@@ -236,10 +236,13 @@
   display: inline-block;
   line-height: 1em;
 }
- @media (max-width:550px){
+ @media (max-width:450px){
      .proper{
          margin-top:-7%;
      }
+   .ml2{
+      font-size :1.6em
+     } 
         }
 
     </style>
