--- a/assets/event.html
+++ b/assets/event.html
@@ -326,16 +326,26 @@
                 
         </div>
 
-       <!-- <div class="row">
+      <div class="row">
 
 
             <div style="text-align: justify; margin-left: 35px;">
-                
                 <h3>&nbsp;UPCOMING EVENTS</h3>
-                <br>
-              <center><h3><b>We will update you soon...</b></h3></center>
             </div>
-        </div> -->
+          <div class="col-sm-4" style="padding: 50px;" data-aos="flip-left">
+                <div class="card card-cascade">
+                    <div class="view view-cascade overlay">
+                        <img class="card-img-top" src="../assets/images/madhav.jpeg" style="width:95%;" alt="madhav"
+                            style="width: 95%;">
+                    </div>
+                    <div class="card-body card-body-cascade text-center">
+                        <h4 class="card-title"><strong>ACM - S WEBINAR</strong></h4>
+                        <h6 class="font-weight-bold indigo-text py-2">SPEAKER 09</h6>
+                        <a href="https://forms.gle/W3TXSTgcWPVYasyV7" style="color:white;"><button class="btn blue-gradient">REGISTER</button></a>
+                    </div>
+                </div>
+            </div>
+        </div> 
         <div class="row">
             <div style="text-align: justify; margin-left: 35px;">
                 </br>
