--- a/assets/event.html
+++ b/assets/event.html
@@ -339,7 +339,7 @@
                             style="width: 95%;">
                     </div>
                     <div class="card-body card-body-cascade text-center">
-                        <h4 class="card-title"><strong>ACM - S WEBINAR</strong></h4>
+                        <h4 class="card-title"><strong>ACM - S MASTERCLASS</strong></h4>
                         <h6 class="font-weight-bold indigo-text py-2">SPEAKER 09</h6>
                         <a href="https://forms.gle/W3TXSTgcWPVYasyV7" style="color:white;"><button class="btn blue-gradient">REGISTER</button></a>
                     </div>
