--- a/index.html
+++ b/index.html
@@ -240,9 +240,15 @@
      .proper{
          margin-top:-7%;
      }
+     .para{
+         margin-top:3%;
+     }
    .ml2{
-      font-size :1.6em
+      font-size :1.75em
      } 
+     .init{
+         font-size :1.75em
+        }
         }
 
     </style>
@@ -304,7 +310,7 @@
             </div>
             <div class="col-sm-6"  data-aos="fade-up" style="text-align: justify;">
 
-                <p style="font-size: 20px">
+                <p class="para" style="font-size: 20px">
                     ACM, the world&#39;s largest educational and scientific computing society, delivers resources that
                     advance computing as a science and a profession. ACM provides the computing field's premier Digital
                     Library and serves its members and the computing profession with leading-edge publications,
@@ -352,7 +358,7 @@
 
   <div class="services" style="margin: 20px  20px; text-align: center;">
         
-        <h2 style="margin-bottom:30px"> <b> INITIATIVES & ACTIVITIES </b> </h2>
+        <h2 class="init" style="margin-bottom:30px"> <b> INITIATIVES & ACTIVITIES </b> </h2>
 
         <hr>
         <br>
