--- a/index.html
+++ b/index.html
@@ -240,15 +240,19 @@
      .proper{
          margin-top:-7%;
      }
-     .para{
-         margin-top:6%;
-     }
+     
    .ml2{
       font-size :1.75em
      } 
      .init{
          font-size :1.75em
         }
+        }
+@media (max-width:750px){
+    .para{
+         margin-top:10%;
+     }
+    
         }
 
     </style>
