--- a/assets/blog.html
+++ b/assets/blog.html
@@ -359,7 +359,7 @@ header {
 <div style="text-align: center;">
     <b>
         <br>
-        <h1 class="ml2">BLOGS BY US!</h1>
+        <h1 class="ml2">BLOGS BY US</h1>
     </b>
 </div>
 <hr style="width:80%">
