--- a/assets/event.html
+++ b/assets/event.html
@@ -335,7 +335,7 @@
           <div class="col-sm-4" style="padding: 50px;" data-aos="flip-left">
                 <div class="card card-cascade">
                     <div class="view view-cascade overlay">
-                        <img class="card-img-top" src="../assets/images/madhav.jpeg" style="width:95%;" alt="madhav"
+                        <img class="card-img-top" src="../assets/images/MG-20200715-WA0042.jpg" style="width:95%;" alt="madhav"
                             style="width: 95%;">
                     </div>
                     <div class="card-body card-body-cascade text-center">
