--- a/assets/event.html
+++ b/assets/event.html
@@ -64,11 +64,16 @@
       h3{
         color:white;
         text-align:justify;
-        margin-left:37px;
+        
       }
     @media (max-width:550px){
         h3{
        text-align:center;
+} 
+}
+@media (min-width:551px){
+        h3{
+       margin-left:37px;
 } 
 }
 
